--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Example for a Flexbox layout */
+header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+   /*Aligns items in the header */
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center; /* Centers items vertically */
+  padding: 1rem;
+}
+
+nav {
+  overflow: auto;
+  font-family: 'Inter', sans-serif;
+  font-weight: bold;
+  align-items: center;
+
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
+nav li {
+  margin: 0 1rem;
+}
+
+nav a {
+  text-decoration: none;
+  color: inherit;
+}
+
+main {
+  display: flex;
+  justify-content: 'space-between',;
+  align-items: 'center',;
+  padding: 2rem;
+  background-color: #495E57;
   color: white;
+  font-weight: 500;
+  font-size: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: #F4CE14;
+  font-family: 'Martel Sans', ;
+  font-size: 51px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+  font-family: 'Markazi Text';
+  font-size: 35;
+}
+
+button {
+  background-color: #F4CE14;
+  color: black;
+  padding: 1rem 1.2rem;
+  cursor: pointer;
+  border: none;
+  font-family: 'Inter', sans-serif;
+  font-weight: bold;
+  font-size: 21px;
+  border-radius: 8px;
+}
+
+
+footer {
+  display: flex;
+  justify-content: center; /* Center footer content */
+  padding: 1rem;
 }
