--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@ nav {
   font-family: 'Inter', sans-serif;
   font-weight: bold;
   align-items: center;
-
 }
 
 nav ul {
@@ -23,6 +22,7 @@ nav ul {
 
 nav li {
   margin: 0 1rem;
+  margin-left: 2rem;
 }
 
 nav a {
@@ -30,29 +30,52 @@ nav a {
   color: inherit;
 }
 
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  background-color: white;
+  color: black;
+  font-weight: 500;
+  font-size: 25px;
+}
+
 main {
   display: flex;
-  justify-content: 'space-between',;
-  align-items: 'center',;
+  justify-content: center;
+  align-items: center;
   padding: 2rem;
   background-color: #495E57;
   color: white;
   font-weight: 500;
   font-size: 25px;
+  /*position: relative;*/
+}
+
+.textMain {
+  justify-content: center;
+  align-items: center;
+  padding-right: 1rem;
+  /*position: relative;*/
+  right: 215px;
+
 }
 
 h1 {
   color: #F4CE14;
   font-family: 'Martel Sans', ;
   font-size: 51px;
+
 }
 
 h3 {
   font-family: 'Markazi Text';
   font-size: 35;
+
 }
 
-button {
+.button-yellow {
   background-color: #F4CE14;
   color: black;
   padding: 1rem 1.2rem;
@@ -64,6 +87,71 @@ button {
   border-radius: 8px;
 }
 
+.order {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 9rem;
+}
+
+.price-name {
+  display: flex; /* Makes the container a flex container */
+  justify-content: space-between;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  font-size: 20px;
+}
+
+.cards-container {
+  display: flex;
+  justify-content: center; /* Centers the cards horizontally */
+  gap: 2rem; /* Adds space between the cards */
+}
+
+.card {
+  width: 300px; /* Adjust the width as needed */
+  border: 1px solid #ccc;
+  padding: 1rem;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px 10px 0 0;
+  background-color: #D9D9D9;
+}
+
+.card img {
+  max-width: 350px;
+  min-width: 300px;
+  height: 200px;
+  margin-bottom: 1rem;
+  object-fit:fill;
+}
+
+.card h3 {
+  margin-bottom: 0.5rem;
+  font-family: 'Karla', sans-serif;
+}
+
+.card p {
+  margin-bottom: 1rem;
+  font-family: 'Karla', sans-serif;
+  text-align: left;
+  margin-left: 1.5rem;
+}
+
+.bot-btn {
+  display: flex;
+}
+
+.order-btn {
+  border: none;
+  font-size: 20px;
+  margin-left: 1.25rem;
+  background-color: #D9D9D9;
+  font-family: 'Karla', sans-serif;
+  font-weight: bold;
+
+}
 
 footer {
   display: flex;
