--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ nav a {
   color: black;
   font-weight: 500;
   font-size: 25px;
+  margin: 7rem;
 }
 
 main {
@@ -87,6 +88,66 @@ h3 {
   border-radius: 8px;
 }
 
+.whole-test {
+  background-color: #495E57;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+  color: white;
+
+}
+.test-tag {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.testimonials-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  font-size: 26px;
+
+}
+
+.testimonial-cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
+}
+
+.testimonial-card {
+  border: 4px solid black;
+  padding: 1rem;
+  border-radius: 4%;
+  width: 300px; /* Adjust the width as needed */
+  height: auto;
+}
+
+.testimonial-card p {
+  font-size: 14px; /* Adjust the font size */
+  word-wrap: break-word;
+  line-height: 1.2;
+  overflow: hidden;
+  text-align: left;
+  padding-bottom: 2rem;
+}
+
+.rating {
+  font-weight: bold;
+}
+
+.stars {
+  /* Add styling for the star rating here */
+}
+
+.img-review {
+  display: flex;
+  padding: 1rem;
+  height: 250px;
+  gap: 1rem;
+}
 .order {
   display: flex;
   justify-content: center;
@@ -106,6 +167,7 @@ h3 {
   display: flex;
   justify-content: center; /* Centers the cards horizontally */
   gap: 2rem; /* Adds space between the cards */
+  padding: 3rem;
 }
 
 .card {
@@ -150,6 +212,40 @@ h3 {
   background-color: #D9D9D9;
   font-family: 'Karla', sans-serif;
   font-weight: bold;
+}
+
+.image-container {
+  position: relative; /* Necessary for absolute positioning */
+  padding-left: 4rem;
+}
+.image-base {
+  display: block;
+  transform: translate(-10%, 25%);
+  object-fit:cover;
+}
+.image-overlay {
+  position: absolute;
+    top: 50%; /* Adjust top position as needed */
+    left: 50%; /* Adjust left position as needed */
+    transform: translate(32%, -50%);
+    object-fit:cover;
+}
+
+.container-foot {
+  display: flex;
+  justify-content: center;
+  margin: 10rem;
+}
+
+.image-column-foot {
+   /* Adjust the flex-grow property to control column width */
+  /* Add styles for the image as needed */
+  padding-right: 4rem;
+}
+
+.text-column {
+  padding-top: 5rem;
+  padding-right: 5rem; /* Adjust padding as needed */
 
 }
 
